# nfsp-donation-reader

./: README.md
backend/: extractor.py  main.py  pyproject.toml
chrome-extension/: README.md  index.html  manifest.json  sw.js
chrome-extension/inject/: script.js  styles.css
